--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -24,7 +24,11 @@ services:
       - db
     volumes:
       - nextcloud:/var/www/html
+      # Data directory mounted to /mnt/nfs/family/nextcloud
+      - /mnt/nfs/family/nextcloud:/var/www/html/data
     environment:
+      - PUID=1005
+      - PGID=1005
       - MYSQL_PASSWORD=<YOUR_MYSQL_USER_PASSWORD>
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
