--- a/arr-stack/docker-compose.yml
+++ b/arr-stack/docker-compose.yml
@@ -11,17 +11,16 @@ services:
     container_name: gluetun
     cap_add:
       - NET_ADMIN
-    devices:
-      - /dev/net/tun:/dev/net/tun
+      - /dev/net/tun:/dev/net/tun # If running on an LXC see readme for more info.
     networks:
       servarrnetwork:
         ipv4_address: 172.69.0.2
     ports:
-      - 8123:8123    # qBittorrent Web UI
-      - 6881:6881    # qBittorrent peer-to-peer traffic
-      - 6789:6789    # NZBGet Web UI
-      - 9696:9696    # Prowlarr Web UI
-      - 3001:3001    # Firefox remote-access interface
+      - 8123:8123 # qbittorrent web interface
+      - 6881:6881 # qbittorrent torrent port
+      - 6789:6789 # nzbget
+      - 9696:9696 # prowlarr
+      # - 3001:3001 # firefox
     volumes:
       - ./gluetun:/gluetun
     environment:
@@ -32,7 +31,7 @@ services:
       - WIREGUARD_PRIVATE_KEY=<PRIVATE_KEY> # Replace with your WireGuard private key
       - SERVER_COUNTRIES=<COUNTRY>         # Comma-separated list of server countries (e.g., Sweden)
     healthcheck:
-      test: ["CMD", "ping", "-c", "1", "www.mullvad.net"]
+      test: ping -c 1 www.mullvad.net || exit 1
       interval: 20s
       timeout: 10s
       retries: 5
@@ -45,25 +44,27 @@ services:
     labels:
       - deunhealth.restart.on.unhealthy=true  # Trigger deunhealth to restart if unhealthy
     environment:
-      - PUID=1000                            # Adjust to match host user ID
-      - PGID=1000                            # Adjust to match host group ID
+      - PUID=1010                            # Adjust to match host user ID
+      - PGID=1010                            # Adjust to match host group ID
       - TZ=<YOUR_TIME_ZONE>		   # Set your local timezone (e.g., America/Los_Angeles)
       - WEBUI_PORT=8123                      # Internal web UI port
     volumes:
       - ./qbittorrent:/config                # Holds settings and torrent data
       - /mnt/nfs/jellyfin:/data
+      - /mnt/WD-ExtHDD/Jellyfin:/external
     depends_on:
       gluetun:
         condition: service_healthy
         restart: true
     network_mode: service:gluetun           # Route all traffic through VPN container
     healthcheck:
-      test: ["CMD", "ping", "-c", "1", "www.mullvad.net"]
-      interval: 60s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
+        test: ping -c 1 www.mullvad.net || exit 1
+        interval: 60s
+        retries: 3
+        start_period: 20s
+        timeout: 10s
 
+# See the 'qBittorrent Stalls with VPN Timeout' section for more information.
   deunhealth:
     image: qmcgaw/deunhealth
     container_name: deunhealth
@@ -80,8 +81,8 @@ services:
     image: lscr.io/linuxserver/nzbget:latest
     container_name: nzbget
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=1010
+      - PGID=1010
       - TZ=<YOUR_TIME_ZONE>		   # Set your local timezone (e.g., America/Los_Angeles)
       - NZBGET_USER=<USERNAME>             # Web UI login username
       - NZBGET_PASS=<PASSWORD>             # Web UI login password
@@ -124,7 +125,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./sonarr:/config                   # Sonarr database and settings
-      - /mnt/nfs/jellyfin:/data
+      - /mnt/truenas_data/jellyfin_data:/data
+      - /mnt/truenas_data/jellyfin_data/tv:/tv
     ports:
       - 8989:8989                         # Sonarr Web UI
     networks:
@@ -142,30 +144,13 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./radarr:/config                   # Radarr database and settings
-      - /mnt/nfs/jellyfin:/data
+      - /mnt/truenas_data/jellyfin_data:/data
+      - /mnt/truenas_data/jellyfin_data/movies:/movies
     ports:
       - 7878:7878                         # Radarr Web UI
     networks:
       servarrnetwork:
         ipv4_address: 172.69.0.4
-
-  lidarr:
-    image: lscr.io/linuxserver/lidarr:latest
-    container_name: lidarr
-    restart: unless-stopped
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=<YOUR_TIME_ZONE>		  # Set your local timezone (e.g., America/Los_Angeles)
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ./lidarr:/config                  # Lidarr database and settings
-      - /mnt/nfs/jellyfin:/data
-    ports:
-      - 8686:8686                         # Lidarr Web UI
-    networks:
-      servarrnetwork:
-        ipv4_address: 172.69.0.5
 
   bazarr:
     image: lscr.io/linuxserver/bazarr:latest
@@ -178,36 +163,17 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./bazarr:/config                  # Bazarr settings and subtitle data
-      - /mnt/nfs/jellyfin:/data
+      - /mnt/truenas_data/jellyfin_data:/data
     ports:
       - 6767:6767                         # Bazarr Web UI
     networks:
       servarrnetwork:
         ipv4_address: 172.69.0.6
 
-  firefox:
-    image: lscr.io/linuxserver/firefox:latest
-    container_name: firefox
-    # Route browser traffic through the VPN for privacy
-    network_mode: service:gluetun
-    depends_on:
-      - gluetun
-    security_opt:
-      - seccomp:unconfined                # Relax seccomp for certain plugins (optional)
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=<YOUR_TIME_ZONE>		  # Set your local timezone (e.g., America/Los_Angeles)
-    volumes:
-      - ./firefox:/config                 # Firefox profile and settings
-    shm_size: "1gb"                     # Allocate shared memory for performance
-    restart: unless-stopped
-
   homarr:
-    image: ghcr.io/homarr-labs/homarr:latest
     container_name: homarr
+    image: ghcr.io/homarr-labs/homarr:latest
     restart: unless-stopped
-    # Optional Docker integration for service status cards
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # Optional, only if you want docker integration
       - ./homarr/appdata:/appdata         # Homarr settings and widget data
@@ -218,3 +184,56 @@ services:
     networks:
       servarrnetwork:
         ipv4_address: 172.69.0.7
+
+  # lidarr:
+    # container_name: lidarr
+    # image: lscr.io/linuxserver/lidarr:latest
+    # restart: unless-stopped
+    # volumes:
+      # - /etc/localtime:/etc/localtime:ro
+      # - ./lidarr:/config
+      # - /mnt/nfs/jellyfin:/data
+    # environment:
+     # - PUID=1000
+     # - PGID=1000
+     # - TZ=<YOUR_TIME_ZONE>		  # Set your local timezone (e.g., America/Los_Angeles)
+    # ports:
+      # - 8686:8686
+    # networks:
+      # servarrnetwork:
+        # ipv4_address: 172.69.0.5
+
+  # readarr:
+    # image: lscr.io/linuxserver/readarr:develop
+    # container_name: readarr
+    # restart: unless-stopped
+    # environment:
+      # - PUID=1000
+      # - PGID=1000
+      # - TZ=<YOUR_TIME_ZONE>		  # Set your local timezone (e.g., America/Los_Angeles)
+    # volumes:
+      # - ./readarr:/config
+      # - /mnt/WD-ExtHDD/Jellyfin:/data
+      # - /mnt/truenas_data/jellyfin_data:/data
+    # ports:
+      # - 8787:8787
+    # networks:
+      # servarrnetwork:
+        # ipv4_address: 172.69.0.5
+
+  # firefox:
+    # image: lscr.io/linuxserver/firefox:latest
+    # container_name: firefox
+    # network_mode: "service:gluetun"
+    # depends_on:
+      # - gluetun
+    # security_opt:
+      # - seccomp:unconfined #optional
+    # environment:
+      # - PUID=1000
+      # - PGID=1000
+      # - TZ=<YOUR_TIME_ZONE>		  # Set your local timezone (e.g., America/Los_Angeles)
+    # volumes:
+      # - ./firefox:/config
+    # shm_size: "1gb"
+    # restart: unless-stopped
