--- a/opensource-monitoring/docker-compose.yml
+++ b/opensource-monitoring/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
     ports:
-      - 8081:8080
+      - 8080:8080
     networks:
       - monitoring
     volumes:
@@ -66,3 +66,12 @@ services:
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
+    depends_on:
+      - redis
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - 6379:6379
+    networks:
+      - monitoring
